Fixed overflow

--- a/annotationTools/css/bubble.css
+++ b/annotationTools/css/bubble.css
@@ -22,6 +22,7 @@
     font-size: 0.7em;
     line-height:1.2em;
     font-weight:400;
+    overflow: auto;
 }
 
 /* Variant : for top positioned triangle  */
